# Big-Data

./: .gitignore  .pre-commit-config.yaml  .zshrc  Dockerfile  README.md  entrypoint.sh  pyproject.toml  startup-script.sh
.devcontainer/: devcontainer.json  docker-compose.yaml
.devcontainer/docker/: Dockerfile
output/test_predictions.csv/: .part-00000-63338670-0033-48e0-9bba-07ff5f953765-c000.csv.crc  part-00000-63338670-0033-48e0-9bba-07ff5f953765-c000.csv
output/validate_predictions.csv/: .part-00000-dae770b0-ad1e-4536-9de9-5f3e233212de-c000.csv.crc  part-00000-dae770b0-ad1e-4536-9de9-5f3e233212de-c000.csv
src/dsp-dagster/: Dockerfile  setup.py
src/dsp-dagster/dsp_dagster/: __init__.py  jobs.py
src/dsp-dagster/dsp_dagster/assets/: __init__.py
src/dsp-dagster/dsp_dagster/assets/extract/: knmi_data.py
src/dsp-dagster/dsp_dagster/assets/load/: load.py
src/dsp-mlflow/: Dockerfile  startup-script.sh
src/dsp-streamlit/: Dockerfile  🏠_Home.py
src/dsp-streamlit/custom/: database.py
src/dsp-streamlit/pages/: 2_📑_Functionalities.py
src/mlflow/: Dockerfile  pyproject.toml
src/notebooks/: check-data.ipynb  ingest-dw.ipynb  kaggle.json  spark-cluster.ipynb  test.ipynb
src/notebooks/lib/: duckdbcontext.py
src/orchestration/: .env  Dockerfile  pyproject.toml  setup.cfg  setup.py  startup-script.sh
src/orchestration/dagster/resources/: __init__.py
src/orchestration/src/: __init__.py  jobs.py
src/orchestration/src/assets/: __init__.py
src/orchestration/src/assets/extract/: fire_department_data.py  geodata.py  imdb.py  imdb_datasets.py  municipality_data.py
src/orchestration/src/resources/: __init__.py
src/streamlit/: Dockerfile  pyproject.toml
