[tool.poetry]
name = "Big-Data"
version = "0.1.0"
description = "Big Data Project"
authors = ["Author"]
readme = "README.md"
package-mode = false

[tool.jupysql.SqlMagic]
displaycon = false
feedback = true
autopandas = true


[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.18.0"
dagster = "^1.5.13"
dagster-webserver = "^1.5.13"
dagster-duckdb = "^0.21.13"
dagster-duckdb-pandas = "^0.21.13"
dagster-duckdb-polars = "^0.21.13"
xlsx2csv = "^0.8.2"
openpyxl = "^3.1.2"
asyncio = "^3.4.3"
httpx = "^0.26.0"
duckdb = "^0.9.2"
duckdb-engine = "^0.10.0"
jupysql = "^0.10.7"
notebook = "^7.0.6"
xgboost = "^2.0.3"
scikit-learn = "^1.3.2"
ruff = "^0.1.9"
spelling = "^1.2.1"
ipykernel = "^6.27.1"
ipython = "^8.19.0"
requests = "^2.30.0"
urllib3 = "^1.26"
requests-toolbelt = "0.10.1"
pygwalker = "^0.3.20"
pre-commit = "^3.6.0"
seaborn = "^0.13.1"
polars = "^0.20.15"
pyspark = "^3.5.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"]
ignore-init-module-imports = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []
fix = true


# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 90

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
